# docs/swagger.json
@@ -16,7 +16,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/configs/config": {
+        "/configo/config": {
             "post": {
                 "description": "Save config",
                 "consumes": [
@@ -54,7 +54,61 @@
                 }
             }
         },
-        "/configs/config/{key}": {
+        "/configo/metadata": {
+            "get": {
+                "description": "Get all config keys",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Config"
+                ],
+                "summary": "Get all config keys",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/configo.configMetadataResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/configo/web/": {
+            "get": {
+                "description": "UI",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "Config"
+                ],
+                "summary": "UI",
+                "responses": {
+                    "200": {
+                        "description": "UI",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/configs/confio/{key}": {
             "get": {
                 "description": "Get config by key",
                 "consumes": [
@@ -89,63 +143,20 @@
                     }
                 }
             }
-        },
-        "/configs/metadata": {
-            "get": {
-                "description": "Get all config keys",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Config"
-                ],
-                "summary": "Get all config keys",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/configo.configMetadata"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    }
-                }
-            }
-        },
-        "/configs/ui": {
-            "get": {
-                "description": "UI",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "Config"
-                ],
-                "summary": "UI",
-                "responses": {
-                    "200": {
-                        "description": "UI",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    }
-                }
-            }
         }
     },
     "definitions": {
+        "configo.ConfigInfo": {
+            "type": "object",
+            "properties": {
+                "configKeys": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "configo.ConfigObject": {
             "type": "object",
             "properties": {
@@ -199,6 +210,17 @@
                 "CONFIG_TYPE_LIST"
             ]
         },
+        "configo.ServiceInfo": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "configo.UpdateConfigRequest": {
             "type": "object",
             "properties": {
@@ -210,14 +232,14 @@
                 }
             }
         },
-        "configo.configMetadata": {
+        "configo.configMetadataResponse": {
             "type": "object",
             "properties": {
-                "keys": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "configInfo": {
+                    "$ref": "#/definitions/configo.ConfigInfo"
+                },
+                "serviceInfo": {
+                    "$ref": "#/definitions/configo.ServiceInfo"
                 }
             }
         }
